--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   },
   "dependencies": {
     "@trodi/electron-splashscreen": "^1.0.2",
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "react-router-dom": "^6.10.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.31.0",
@@ -29,13 +33,17 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
     "electron": "^23.2.1",
     "electron-builder": "^23.6.0",
     "eslint": "^8.37.0",
     "eslint-plugin-react": "^7.32.2",
+    "postcss": "^8.4.21",
+    "prettier": "2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.58.3",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
     "vite-electron-plugin": "^0.8.2",
