--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,11 +3,15 @@
   "singleQuote": true,
   "trailingComma": "none",
   "bracketSpacing": true,
-  "tabWidth": 2,
+  "tabWidth": 4,
   "semi": true,
   "overrides": [
     {
-      "files": ["**/*.css", "**/*.scss", "**/*.html"],
+      "files": [
+        "**/*.css",
+        "**/*.scss",
+        "**/*.html"
+      ],
       "options": {
         "singleQuote": false
       }
