--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gitfeather",
   "version": "1.0.0",
-  "main": "dist-electron/main/index.js",
+  "main": "dist-electron/main.js",
   "description": "Electron Vite React boilerplate.",
   "author": "Duckelekuuk",
   "license": "MIT",
@@ -20,10 +20,12 @@
   },
   "dependencies": {
     "@trodi/electron-splashscreen": "^1.0.2",
+    "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react-router-dom": "^6.10.0",
+    "simple-git": "^3.18.0",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
@@ -43,7 +45,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.58.3",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5",
     "vite": "^4.3.1",
     "vite-electron-plugin": "^0.8.2",
