--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,7 +4,17 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "paths": {
+      "@shared/*": [
+        "shared/*"
+      ]
+    }
   },
-  "include": ["vite.config.ts", "package.json", "electron"]
+  "include": [
+    "vite.config.ts",
+    "package.json",
+    "electron",
+    "shared"
+  ]
 }
