--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "e2e": "playwright test"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "@trodi/electron-splashscreen": "^1.0.2",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
